@@ -1,3 +1,10 @@
+2004-10-27  Vincent Noel  <vnoel@cox.net>
+
+	* logview.c: Allow the opening of new windows. Remove the "Switch
+	Log" option : now each window display its own log. Removed the
+	"Close All Logs" option. Disabled the "Monitor" option for now
+	while I figure how to implement it.
+
 2004-10-26  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: Major rewrite :
